package com.rloayza.classroom.studentlocaltor.visitor;

public interface Visitable {

    void accept(Visitor visitor);
}
