package com.rloayza.classroom.studentlocaltor.visitor;

public interface Visitor {

    void visit(Visitable visitable);
}
